corrige a cor de fundo para enxergar a informação

--- a/src/components/Searchbar.css
+++ b/src/components/Searchbar.css
@@ -1,5 +1,5 @@
 .searchbar-container {
-    background-color: black;
+    background-color: green;
     display: flex;
     margin: 0px, auto;
     padding: 0 20px;
