--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -6,6 +6,6 @@ nav {
   height: 100px;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content:center;
   align-items: center;
 }
