--- a/src/components/Pokemoncard.css
+++ b/src/components/Pokemoncard.css
@@ -1,6 +1,6 @@
 .pokemon-card {
   display: flex;
-  box-shadow: 4px 4px 4px ((0, 0, 0, 0.25));
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 3px;
 }
 
@@ -8,7 +8,7 @@
   width: 70px;
   height: 70px;
   margin-right: 10px;
-
+  cursor: zoom-in
 }
 
 .pokemon-img-div {
@@ -48,4 +48,12 @@
 .pokemon-type-txt {
   margin-right: 10px;
   text-transform: capitalize;
+}
+
+.fav-button {
+  border: none;
+  background-color: white;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
+  padding: 4px;
+  cursor: pointer;
 }
