--- a/src/components/Searchbar.css
+++ b/src/components/Searchbar.css
@@ -1,5 +1,4 @@
 .searchbar-container {
-    background-color: green;
     display: flex;
     margin: 0px, auto;
     padding: 0 20px;
@@ -13,13 +12,15 @@
 
 .searchbar input {
     padding: 10px;
-    box-shadow: 0px 2px 2px black;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
     border-radius: 3px;
     border: none;
 }
 
 .searchbar-btn button {
-    background-color: red;
+    background-color: black;
+    margin-left: 4px;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
     border: none;
     border-radius: 10px;
     height: 44px;
