--- a/src/App.css
+++ b/src/App.css
@@ -3,5 +3,12 @@
 }
 
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items:stretch;
+}
+
+.ref {
+  align-self: center;
 }
