Adiciona pokedex de favoritos no fim do app

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,7 +3,8 @@
 }
 
 nav {
-  height: 100px;
+  width:fit-content;
+  height: auto;
   display: flex;
   flex-direction: row;
   justify-content:center;
