--- a/src/components/Pokedex.css
+++ b/src/components/Pokedex.css
@@ -1,3 +1,7 @@
+.pokedex-body {
+    width: auto;
+}
+
 .pokedex-header {
     display: flex;
     flex-direction: row;
@@ -9,5 +13,5 @@
 .pokedex-grid {
     display: grid;
     gap: 10px;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 }
