--- a/src/components/Pokemoncard.css
+++ b/src/components/Pokemoncard.css
@@ -1,4 +1,5 @@
 .pokemon-card {
+  width: auto;
   display: flex;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 3px;
@@ -12,7 +13,7 @@
 }
 
 .pokemon-img-div {
-  padding: 0px 5px;
+  width: auto;
 }
 
 .card-body {
