--- a/src/components/Pokemoncard.css
+++ b/src/components/Pokemoncard.css
@@ -215,13 +215,35 @@
   border-radius: 10px;
 }
 
+/* Ground type card */
 .pokemon-ground-card {
-  background-color: brown;
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/8/8d/Pok%C3%A9mon_Ground_Type_Icon.svg");
+  background-color: rgba(232,114,54,255);
+  background-repeat: repeat;
+  background-blend-mode: soft-light;
+  background-size: 37px;
+  margin-left: 5px;
+  margin-right: 5px;
   width: auto;
   display: flex;
+  flex-direction: row;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 3px;
-  width: auto;
+  border-radius: 10px;
+}
+
+.pokemon-ground-card .pokemon-image {
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/8/8d/Pok%C3%A9mon_Ground_Type_Icon.svg");
+  background-color: rgba(232,114,54,255);
+  background-blend-mode: lighten;
+  width: 70px;
+  height: 70px;
+  cursor: zoom-in;
+  justify-self: center;
+  display: block;
+  margin-top: 2px;
+  margin-right: 10px;
+  padding: 1px 2px 1px 1px;
+  border-radius: 10px;
 }
 
 .pokemon-fairy-card {
@@ -231,13 +253,6 @@
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 3px;
   width: auto;
-}
-
-.pokemon-image {
-  background-color: white;
-  width: 70px;
-  height: 70px;
-  cursor: zoom-in;
 }
 
 .pokemon-img-div {
@@ -384,6 +399,18 @@
   }
 
   .pokemon-electric-card .pokemon-image {
+    width: 148px;
+    height: 148px;
+    margin-top: 0px;
+    margin-right: 10px;
+    padding: 0px;
+  }
+
+  .pokemon-ground-card {
+    width: 480px;
+  }
+
+  .pokemon-ground-card .pokemon-image {
     width: 148px;
     height: 148px;
     margin-top: 0px;
