--- a/src/components/Pokemoncard.css
+++ b/src/components/Pokemoncard.css
@@ -137,7 +137,7 @@
   /* background-blend-mode: soft-light; */
   background-size: 200px;
   background-position: 70px;
-  background-position-y: -90px;
+  /* background-position-y: -90px; */
   margin-left: 5px;
   margin-right: 5px;
   width: auto;
@@ -268,7 +268,7 @@
   /* background-blend-mode: soft-light; */
   background-size: 200px;
   background-position: 70px;
-  background-position-y: -90px;
+  /* background-position-y: -90px; */
   margin-left: 5px;
   margin-right: 5px;
   width: auto;
@@ -314,6 +314,39 @@
 .pokemon-fighting-card .pokemon-image {
   background-image: url("https://upload.wikimedia.org/wikipedia/commons/b/be/Pok%C3%A9mon_Fighting_Type_Icon.svg");
   background-color: rgba(224,48,106,255);
+  background-blend-mode: lighten;
+  width: 70px;
+  height: 70px;
+  cursor: zoom-in;
+  justify-self: center;
+  display: block;
+  margin-top: 2px;
+  margin-right: 10px;
+  padding: 1px 2px 1px 1px;
+  border-radius: 10px;
+}
+
+/* Psychic type card */
+.pokemon-psychic-card {
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/a/ab/Pok%C3%A9mon_Psychic_Type_Icon.svg");
+  background-color: rgba(255,102,117,255);
+  background-repeat: no-repeat;
+  /* background-blend-mode: soft-light; */
+  background-size: 200px;
+  background-position: 70px;
+  /* background-position-y: -90px; */
+  margin-left: 5px;
+  margin-right: 5px;
+  width: auto;
+  display: flex;
+  flex-direction: row;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+}
+
+.pokemon-psychic-card .pokemon-image {
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/a/ab/Pok%C3%A9mon_Psychic_Type_Icon.svg");
+  background-color: rgba(255,102,117,255);
   background-blend-mode: lighten;
   width: 70px;
   height: 70px;
@@ -409,6 +442,9 @@
 
   .pokemon-fire-card {
     width: 480px;
+    background-size: 400px;
+    background-position: 140px;
+    background-position-y: -100px;
   }
 
   .pokemon-fire-card .pokemon-image {
@@ -421,6 +457,9 @@
 
   .pokemon-water-card {
     width: 480px;
+    background-size: 400px;
+    background-position: 140px;
+    background-position-y: -160px;
   }
 
   .pokemon-water-card .pokemon-image {
@@ -433,6 +472,9 @@
 
   .pokemon-bug-card {
     width: 480px;
+    background-size: 400px;
+    background-position: 140px;
+    background-position-y: -100px;
   }
 
   .pokemon-bug-card .pokemon-image {
@@ -445,6 +487,9 @@
 
   .pokemon-normal-card {
     width: 480px;
+    background-size: 400px;
+    background-position: 140px;
+    /* background-position-y: -70px; */
   }
 
   .pokemon-normal-card .pokemon-image {
@@ -457,6 +502,9 @@
 
   .pokemon-poison-card {
     width: 480px;
+    background-size: 400px;
+    background-position: 140px;
+    background-position-y: -180px;
   }
 
   .pokemon-poison-card .pokemon-image {
@@ -469,6 +517,9 @@
 
   .pokemon-electric-card {
     width: 480px;
+    background-size: 400px;
+    background-position: 140px;
+    /* background-position-y: -100px; */
   }
 
   .pokemon-electric-card .pokemon-image {
@@ -481,6 +532,9 @@
 
   .pokemon-ground-card {
     width: 480px;
+    background-size: 400px;
+    background-position: 140px;
+    /* background-position-y: -100px; */
   }
 
   .pokemon-ground-card .pokemon-image {
@@ -493,6 +547,9 @@
 
   .pokemon-fairy-card {
     width: 480px;
+    background-size: 400px;
+    background-position: 140px;
+    /* background-position-y: -190px; */
   }
 
   .pokemon-fairy-card .pokemon-image {
@@ -505,9 +562,27 @@
 
   .pokemon-fighting-card {
     width: 480px;
+    background-size: 400px;
+    background-position: 140px;
+    /* background-position-y: -100px; */
   }
 
   .pokemon-fighting-card .pokemon-image {
+    width: 148px;
+    height: 148px;
+    margin-top: 0px;
+    margin-right: 10px;
+    padding: 0px;
+  }
+
+  .pokemon-psychic-card {
+    width: 480px;
+    background-size: 400px;
+    background-position: 140px;
+    /* background-position-y: -100px; */
+  }
+
+  .pokemon-psychic-card .pokemon-image {
     width: 148px;
     height: 148px;
     margin-top: 0px;
