--- a/src/components/Pokemoncard.css
+++ b/src/components/Pokemoncard.css
@@ -359,6 +359,39 @@
   border-radius: 10px;
 }
 
+/* Rock type card */
+.pokemon-rock-card {
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/b/bb/Pok%C3%A9mon_Rock_Type_Icon.svg");
+  background-color: rgba(200,182,134,255);
+  background-repeat: no-repeat;
+  /* background-blend-mode: soft-light; */
+  background-size: 200px;
+  background-position: 70px;
+  /* background-position-y: -90px; */
+  margin-left: 5px;
+  margin-right: 5px;
+  width: auto;
+  display: flex;
+  flex-direction: row;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+}
+
+.pokemon-rock-card .pokemon-image {
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/b/bb/Pok%C3%A9mon_Rock_Type_Icon.svg");
+  background-color: rgba(200,182,134,255);
+  background-blend-mode: lighten;
+  width: 70px;
+  height: 70px;
+  cursor: zoom-in;
+  justify-self: center;
+  display: block;
+  margin-top: 2px;
+  margin-right: 10px;
+  padding: 1px 2px 1px 1px;
+  border-radius: 10px;
+}
+
 .pokemon-img-div {
   width: auto;
   justify-self: center;
@@ -583,6 +616,21 @@
   }
 
   .pokemon-psychic-card .pokemon-image {
+    width: 148px;
+    height: 148px;
+    margin-top: 0px;
+    margin-right: 10px;
+    padding: 0px;
+  }
+
+  .pokemon-rock-card {
+    width: 480px;
+    background-size: 400px;
+    background-position: 140px;
+    /* background-position-y: -100px; */
+  }
+
+  .pokemon-rock-card .pokemon-image {
     width: 148px;
     height: 148px;
     margin-top: 0px;
