--- a/src/components/Pokemoncard.css
+++ b/src/components/Pokemoncard.css
@@ -491,6 +491,39 @@
   border-radius: 10px;
 }
 
+/* dark type card */
+.pokemon-dark-card {
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/0/09/Pok%C3%A9mon_Dark_Type_Icon.svg");
+  background-color: rgba(91,84,102,255);
+  background-repeat: no-repeat;
+  /* background-blend-mode: soft-light; */
+  background-size: 200px;
+  background-position: 70px;
+  background-position-y: -60px;
+  margin-left: 5px;
+  margin-right: 5px;
+  width: auto;
+  display: flex;
+  flex-direction: row;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+}
+
+.pokemon-dark-card .pokemon-image {
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/0/09/Pok%C3%A9mon_Dark_Type_Icon.svg");
+  background-color: rgba(91,84,102,255);
+  background-blend-mode: lighten;
+  width: 70px;
+  height: 70px;
+  cursor: zoom-in;
+  justify-self: center;
+  display: block;
+  margin-top: 2px;
+  margin-right: 10px;
+  padding: 1px 2px 1px 1px;
+  border-radius: 10px;
+}
+
 .pokemon-img-div {
   width: auto;
   justify-self: center;
@@ -775,6 +808,21 @@
   }
 
   .pokemon-dragon-card .pokemon-image {
+    width: 148px;
+    height: 148px;
+    margin-top: 0px;
+    margin-right: 10px;
+    padding: 0px;
+  }
+
+  .pokemon-dark-card {
+    width: 480px;
+    background-size: 400px;
+    background-position: 140px;
+    /* background-position-y: -100px; */
+  }
+
+  .pokemon-dark-card .pokemon-image {
     width: 148px;
     height: 148px;
     margin-top: 0px;
