--- a/src/components/Searchbar.css
+++ b/src/components/Searchbar.css
@@ -1,5 +1,5 @@
 .searchbar-container {
-    height: 70px;
+    height: auto;
     display: flex;
     margin: 0px, auto;
     padding: 0 20px;
@@ -7,6 +7,7 @@
 }
 
 .searchbar {
+    display: flex;
     background-color: white;
     margin-right: 20px;
 }
@@ -18,7 +19,7 @@
     border: none;
 }
 
-.searchbar-btn button {
+.search-btn button {
     background-color: black;
     margin-left: 4px;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
@@ -27,4 +28,21 @@
     height: 44px;
     color: white;
     padding: 10px 12px;
+}
+
+.random-btn button {
+    background-color: black;
+    margin-left: 4px;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    border: none;
+    border-radius: 10px;
+    height: 44px;
+    color: white;
+    padding: 10px 12px;
+}
+
+@media screen and (max-width: 630px) {
+    .searchbar-container {
+    flex-direction: column;
+    }
 }
